Adicionado payment date ao relatório de comissões por vendendor

--- a/l10n_br_account_analytic_analysis_ext/report/contract_commission_report_view.xml
+++ b/l10n_br_account_analytic_analysis_ext/report/contract_commission_report_view.xml
@@ -75,6 +75,7 @@
                 <field name="salesperson_id" invisible="1"/>
                 <field name="analytic_account_id"/>
                 <field name="internal_number"/>
+                <field name="date" />
                 <field name="received"/>
                 <field name="perc_commission"/>
                 <field name="value_commission"/>
